--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 h4 {
-	font-family: "specialElite";
+	font-family: "SpecialElite";
 	color: #a2c3f0;
 }
 
@@ -48,7 +48,7 @@ h3 {
 
 p {
 	font-family: "SpecialElite";
-	color:white ;
+	color: white ;
 }
 
 .box {
