--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,5 +146,5 @@ ul {
 	}
 @font-face {
 	font-family: "Special Elite";
-	src: url(specialElite-Regular.ttf);
+	src: url(SpecialElite-Regular.ttf);
 	}
